--- a/Web/6.17/css/style.css
+++ b/Web/6.17/css/style.css
@@ -6,7 +6,6 @@ div.body{
     width: 100%;
 }
 div.top{
-    background-color: white;
     padding-top: 20px;
     padding-left: 5px;
     left: 60px;
@@ -231,4 +230,25 @@ div.box{
     top: 91%;
     border: none;
     border-radius: 5px;
+}
+.bottoms{
+    background-color: wheat;
+    position: absolute;
+    width: 98.7%;
+    height: 60px;
+}
+.top1{
+    right: 37%;
+    top: 10px;
+    display: block;
+    position: absolute;
+    text-align: right;
+    line-height: 17px;
+    font-size: 12px;
+}
+.top2{
+    position: absolute;
+    top: 35px;
+    left: 100px;
+    font-size: 12px;
 }
